# creative-tagger-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: smoke_release.py
src/creative_tagger_mcp/: __init__.py  server.py  taxonomy.py
tests/: conftest.py  test_http_behavior.py  test_prompts.py  test_saved_report_lookup.py  test_tool_surface.py
