[project]
name = "creative-tagger-mcp"
version = "0.2.0"
description = "MCP server for Creative Tagger — taxonomy + library memory + strategist tools for any AI agent"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Stephen Lavender"}]
keywords = ["mcp", "creative", "taxonomy", "ads", "marketing", "creative-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
creative-tagger-mcp = "creative_tagger_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creative_tagger_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# E501 (line length only) ignored where long lines are inherent — server.py's
# tool schemas and the test file's nested-path assertions. All other rules
# still enforced. Mirrors the creative-tagger API repo's convention.
"src/creative_tagger_mcp/server.py" = ["E501"]
"tests/**" = ["E501"]
