[project]
name = "creative-tagger-mcp"
version = "0.2.2"
description = "MCP server for Creative Tagger — taxonomy + library memory + strategist tools for any AI agent"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Stephen Lavender"}]
keywords = ["mcp", "creative", "taxonomy", "ads", "marketing", "creative-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.28.1,<2",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
creative-tagger-mcp = "creative_tagger_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.venv*",
    "/.release-smoke-venv",
    "/.pytest_cache",
    "/.ruff_cache",
    "/build",
    "/dist",
    "**/__pycache__",
    "*.py[cod]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/creative_tagger_mcp"]
